feat: Add major features - Card Analyst, Watchlist, Dashboard, and more
- Add Card Analyst feature with AI-powered card analysis and threads
- Add Watchlist functionality with price tracking and subscriptions
- Add Dashboard with activity feed, stats, and quick actions
- Add Grade Estimator feature
- Add Autocomplete and SearchBar components
- Add Card Uploader with image identification
- Add collection bulk operations and search
- Add authentication improvements and test mode
- Add recent searches functionality
- Add smart search parser
- Add access control utilities
- Update UI components and styling
- Add documentation files (QUICK_START, DEBUGGING_STEPS, etc.)
- Add Supabase migrations for analyst threads and watchlist subscriptions

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,12 @@ ANTHROPIC_API_KEY=
 # Stripe
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
-NEXT_PUBLIC_STRIPE_PRICE_ID=
+STRIPE_ACTIVATION_PRICE_ID=price_xxx  # $20 one-time activation fee
+STRIPE_SUBSCRIPTION_PRICE_ID=price_xxx  # $5/month recurring
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Cron Protection
+CRON_SECRET=your-secret-here  # Used to protect cron endpoints
+
+# Test Mode (bypasses authentication and payment checks)
+NEXT_PUBLIC_TEST_MODE=false
